--- a/app/views/receipt-rules-create.html
+++ b/app/views/receipt-rules-create.html
@@ -65,19 +65,19 @@
             <div class="form-group" ng-if="!receiptRule.autoPrint && displayError" ng-class="{'has-error' : !receiptRule.autoPrint && displayError , 'has-success' : receiptRule.autoPrint}" style="border:1px solid #a94442">
               <label for="auto-print">Print Auto-Receipt For1*</label>
               <div  class="input-group" >
-                <input type="radio" name="PrintAutoReceiptFor" value="All" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
+                <input type="radio" name="PrintAutoReceiptFor" value="All" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
               </div>
               <div>
-                <input type="radio" name="PrintAutoReceiptFor" value="Item" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
+                <input type="radio" name="PrintAutoReceiptFor" value="Item" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
               </div>  
             </div>
             <div class="form-group" ng-if="receiptRule.autoPrint || !displayError">
               <label for="auto-print">Print Auto-Receipt For2*</label>
               <div  class="input-group" >
-                <input type="radio" name="PrintAutoReceiptFor" value="All" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
+                <input type="radio" name="PrintAutoReceiptFor" value="All" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
               </div>
               <div>
-                <input type="radio" name="PrintAutoReceiptFor" value="Item" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
+                <input type="radio" name="PrintAutoReceiptFor" value="Item" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
               </div>  
             </div>
             
